vivado_prjs/fixed_packing/kernel.prj/solution1/csim/report/kernel_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../host.cpp in debug mode
   Compiling ../../../../kernel.cpp in debug mode
../../../../kernel.cpp: In function ‘void kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)’:
../../../../kernel.cpp:7:42: error: use of deleted function ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::<constructor>()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                          ^~
../../../../kernel.cpp:7:11: note: ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::<constructor>()’ is implicitly deleted because the default definition would be ill-formed:
     union {ap_uint<5> ui; ap_int<5> si;} un;
           ^
../../../../kernel.cpp:7:23: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::ui’ with non-trivial ‘ap_uint<_AP_W>::ap_uint() [with int _AP_W = 5]’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                       ^~
../../../../kernel.cpp:7:37: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::si’ with non-trivial ‘ap_int<_AP_W>::ap_int() [with int _AP_W = 5]’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                     ^~
../../../../kernel.cpp:7:42: error: use of deleted function ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::~<constructor>()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                          ^~
../../../../kernel.cpp:7:11: note: ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::~<constructor>()’ is implicitly deleted because the default definition would be ill-formed:
     union {ap_uint<5> ui; ap_int<5> si;} un;
           ^
../../../../kernel.cpp:7:23: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::ui’ with non-trivial ‘ap_uint<5>::~ap_uint()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                       ^~
../../../../kernel.cpp:7:37: error: union member ‘kernel(ap_fixed<5, 2>*, ap_fixed<5, 2>*)::<anonymous union>::si’ with non-trivial ‘ap_int<5>::~ap_int()’
     union {ap_uint<5> ui; ap_int<5> si;} un;
                                     ^~
make: *** [obj/kernel.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
